spectra/tests/ui/fail_metric_missing_name.rs
use spectra::spectra_metric;

spectra_metric! {
    BadMetric {
        store: "default",
        version: "0.1.0",
    }
}

fn main() {}
